--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "lcobucci/jwt": "3.3",
         "rachidlaasri/laravel-installer": "^4.1",
         "stripe/stripe-php": "^7.110",
         "tymon/jwt-auth": "1.0.0-rc.5"
