--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FRONTEND_APP_URL =http://localhost:8080/
 ACCOUNT_VERIFY=false
+
+STRIPE_SECRET=
+PAYPAL_CLIENT_ID=
+RAZORPAY_KEY=
